# event-lens

./: Cargo.toml  README.md
crates/consumer/: Cargo.toml
crates/consumer/src/: main.rs
crates/producer/: Cargo.toml
crates/producer/src/: main.rs
crates/producer/src/config/: mod.rs
crates/producer/src/handlers/: mod.rs
crates/producer/src/kafka/: mod.rs
crates/query-service/: Cargo.toml
crates/query-service/src/: main.rs
crates/query-service/src/graphql/: mod.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
