[package]
name = "consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
# The async runtime
tokio = { version = "1.0", features = ["full"] }

# Kafka client
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Official Elasticsearch client
elasticsearch = "9.1.0-alpha.1"

# Serialization and JSON utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12.4"
reqwest = "0.13.1"
url = "2.5.7"

# Our local workspace crate for shared logic
shared = { path = "../shared" }