[package]
name = "query-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elasticsearch = "9.1.0-alpha.1"
url = "2.5.7"
async-graphql = "7.0"
async-graphql-axum = "7.0"
shared = { path = "../shared" }